DE-11094 Dark Mode
Files tab background colors

--- a/Depo/Depo/Presentation/SubViews/SpotifyStatusView/SpotifyStatusView.xib
+++ b/Depo/Depo/Presentation/SubViews/SpotifyStatusView/SpotifyStatusView.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,7 +45,7 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="pbf-Vc-lrV"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="pbf-Vc-lrV" firstAttribute="trailing" secondItem="2vw-7N-5gV" secondAttribute="trailing" constant="30" id="1rP-9S-Aqz"/>
                 <constraint firstItem="2vw-7N-5gV" firstAttribute="bottom" secondItem="vQu-hA-ZUY" secondAttribute="bottom" constant="-2" id="2Ub-1k-l6F"/>
@@ -69,5 +70,8 @@
     </objects>
     <resources>
         <image name="playlistIcon" width="44" height="44"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
