--- a/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -152,7 +152,7 @@
                                                                 <state key="normal" image="more-1"/>
                                                             </button>
                                                         </subviews>
-                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <color key="backgroundColor" name="primaryBackground"/>
                                                         <constraints>
                                                             <constraint firstItem="cDg-eD-Ha4" firstAttribute="centerY" secondItem="2Uf-Ik-Pxb" secondAttribute="centerY" id="6lD-cd-9Cn"/>
                                                             <constraint firstAttribute="height" constant="39" id="ArZ-y8-YNM"/>
@@ -174,7 +174,7 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ih3-tg-57V">
                                         <rect key="frame" x="14" y="41" width="180" height="1"/>
-                                        <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" name="itemSeperator"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="Vkb-Uf-OXm"/>
                                         </constraints>
@@ -262,8 +262,11 @@
         <image name="more-1" width="6" height="24"/>
         <image name="privateSharePeople" width="16" height="13"/>
         <image name="selectedList" width="36" height="36"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="itemSeperator">
+            <color red="0.91700000000000004" green="0.91700000000000004" blue="0.91700000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
