--- a/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,12 +16,11 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="captchaView" destination="BRt-og-nfn" id="ant-Eq-wTX"/>
-                <outlet property="emailTextField" destination="gqV-qq-vPq" id="GVO-WG-WqB"/>
-                <outlet property="emailTitle" destination="BzH-eK-Hm6" id="WJR-x2-fum"/>
                 <outlet property="infoTitle" destination="KTs-IA-6N1" id="Y95-3X-12K"/>
+                <outlet property="loginEnterView" destination="quc-Rg-Lkk" id="5VI-TK-pd3"/>
                 <outlet property="scrollView" destination="UVa-ce-PgV" id="DrD-Cy-Jk6"/>
                 <outlet property="sendPasswordButton" destination="aQN-30-H9G" id="tI5-Lm-DhV"/>
                 <outlet property="subTitle" destination="oXy-X7-p5o" id="6bD-Kh-96L"/>
@@ -36,55 +33,37 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UVa-ce-PgV">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jzz-bl-nJl">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="Uj0-i2-5yg">
-                                    <rect key="frame" x="20" y="20" width="335" height="103.5"/>
+                                    <rect key="frame" x="20" y="20" width="335" height="106.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oXy-X7-p5o">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="19"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="21"/>
                                             <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
                                             <color key="textColor" red="0.54509803921568623" green="0.5607843137254902" blue="0.64313725490196072" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTs-IA-6N1">
-                                            <rect key="frame" x="0.0" y="87" width="335" height="16.5"/>
+                                            <rect key="frame" x="0.0" y="89" width="335" height="17.5"/>
                                             <fontDescription key="fontDescription" name="TurkcellSatura-Bold" family="Turkcell Satura" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </stackView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzH-eK-Hm6">
-                                    <rect key="frame" x="20" y="133.5" width="335" height="19"/>
-                                    <fontDescription key="fontDescription" name="TurkcellSatura-Bold" family="Turkcell Satura" pointSize="17"/>
-                                    <color key="textColor" red="0.20392156862745098" green="0.80392156862745101" blue="0.80392156862745101" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gqV-qq-vPq">
-                                    <rect key="frame" x="20" y="154.5" width="335" height="30"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="8TL-lW-JJo"/>
-                                    </constraints>
-                                    <nil key="textColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
-                                </textField>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AMo-AF-kI2">
-                                    <rect key="frame" x="20" y="185.5" width="335" height="1"/>
-                                    <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="1" id="AKc-3E-rVQ"/>
-                                    </constraints>
-                                </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="lifebox" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="201.5" width="335" height="327.5"/>
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="quc-Rg-Lkk" userLabel="email" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="20" y="136.5" width="335" height="80"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="lifebox" customModuleProvider="target">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="20" y="231.5" width="335" height="297.5"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="84.5" y="544" width="206" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="206" id="1Up-VE-wq9"/>
@@ -99,21 +78,15 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="aQN-30-H9G" firstAttribute="centerX" secondItem="jzz-bl-nJl" secondAttribute="centerX" id="1ad-ku-5zV"/>
-                                <constraint firstAttribute="trailing" secondItem="AMo-AF-kI2" secondAttribute="trailing" constant="20" id="4F5-o6-E9G"/>
-                                <constraint firstItem="gqV-qq-vPq" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="7IB-U1-ab4"/>
+                                <constraint firstItem="quc-Rg-Lkk" firstAttribute="top" secondItem="Uj0-i2-5yg" secondAttribute="bottom" constant="10" id="59E-Hr-orj"/>
                                 <constraint firstItem="aQN-30-H9G" firstAttribute="top" secondItem="BRt-og-nfn" secondAttribute="bottom" constant="15" id="A27-cd-zN0"/>
                                 <constraint firstItem="BRt-og-nfn" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="AIB-G2-QT7"/>
-                                <constraint firstItem="gqV-qq-vPq" firstAttribute="top" secondItem="BzH-eK-Hm6" secondAttribute="bottom" constant="2" id="AfO-Rq-5ey"/>
                                 <constraint firstAttribute="bottom" secondItem="aQN-30-H9G" secondAttribute="bottom" constant="15" id="C7Q-c9-UeW"/>
-                                <constraint firstItem="BRt-og-nfn" firstAttribute="top" secondItem="AMo-AF-kI2" secondAttribute="bottom" constant="15" id="DAR-45-2HT"/>
-                                <constraint firstAttribute="trailing" secondItem="BzH-eK-Hm6" secondAttribute="trailing" constant="20" id="Jk0-5l-q4c"/>
-                                <constraint firstItem="AMo-AF-kI2" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="MCy-L7-aUf"/>
+                                <constraint firstItem="BRt-og-nfn" firstAttribute="top" secondItem="quc-Rg-Lkk" secondAttribute="bottom" constant="15" id="L6C-CK-US5"/>
                                 <constraint firstAttribute="trailing" secondItem="BRt-og-nfn" secondAttribute="trailing" constant="20" id="Pym-d0-WX9"/>
-                                <constraint firstAttribute="trailing" secondItem="gqV-qq-vPq" secondAttribute="trailing" constant="20" id="UMN-I7-c2G"/>
-                                <constraint firstItem="AMo-AF-kI2" firstAttribute="top" secondItem="gqV-qq-vPq" secondAttribute="bottom" constant="1" id="ao0-7c-0x0"/>
+                                <constraint firstItem="quc-Rg-Lkk" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="SUP-MS-zIv"/>
                                 <constraint firstItem="Uj0-i2-5yg" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="gSo-ET-MiL"/>
-                                <constraint firstItem="BzH-eK-Hm6" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="lki-QR-Cxm"/>
-                                <constraint firstItem="BzH-eK-Hm6" firstAttribute="top" secondItem="Uj0-i2-5yg" secondAttribute="bottom" constant="10" id="wDE-t3-d0a"/>
+                                <constraint firstAttribute="trailing" secondItem="quc-Rg-Lkk" secondAttribute="trailing" constant="20" id="kmb-3u-ADR"/>
                                 <constraint firstItem="Uj0-i2-5yg" firstAttribute="centerX" secondItem="jzz-bl-nJl" secondAttribute="centerX" id="wjP-Wx-fCL"/>
                                 <constraint firstItem="Uj0-i2-5yg" firstAttribute="top" secondItem="jzz-bl-nJl" secondAttribute="top" constant="20" id="xjr-qJ-OSc"/>
                             </constraints>
@@ -127,6 +100,7 @@
                     </constraints>
                 </scrollView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="AEn-1F-Urt"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="UVa-ce-PgV" secondAttribute="trailing" id="Fpb-xR-pf8"/>
@@ -137,7 +111,6 @@
                 <constraint firstItem="UVa-ce-PgV" firstAttribute="leading" secondItem="tLh-dZ-YLw" secondAttribute="leading" id="jOz-FL-aeT"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="AEn-1F-Urt"/>
             <point key="canvasLocation" x="49" y="-193"/>
         </view>
     </objects>
